# tennisim

./: .gitignore  404.html  LICENSE  README.md  README.txt  codecov.yml  index.html  mkdocs.yml  noxfile.py  pyproject.toml  sitemap.xml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: index.md  usage.md
search/: search_index.json
src/tennisim/: game.py  match.py  set.py  sim.py  theory.py  tiebreak.py  utils.py
tests/: __init__.py  test_game.py  test_match.py  test_set.py  test_sim.py  test_tennisim.py  test_theory.py  test_tiebreak.py
usage/: index.html
