[tool.poetry]
name = "tennisim"
version = "0.1.0"
description = ""
authors = ["mjam03 <markjamison03@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.2.2"
matplotlib = "^3.4.3"
scipy = "^1.7.2"
pandas = "^1.3.4"
numpy = "^1.21.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
