[tool.poetry]
name = "tennisim"
version = "0.1.3"
description = "Simple pure python functions for simulating tennis matches"
authors = ["Mark Jamison <markjamison03@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mjam03/tennisim"
repository = "https://github.com/mjam03/tennisim"
documentation = "https://mjam03.github.io/tennisim"

[tool.poetry.urls]
Changelog = "https://github.com/mjam03/tennisim/releases"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"

[tool.poetry.dev-dependencies]
# linters and testing framework
flake8 = "^4.0.1"
black = "^21.10b0"
mypy = "^0.910"
pytest = "^5.2"
pytest-cov = "^3.0.0"
nox = "^2021.10.1"
nox-poetry = "^0.8.6"
coverage = {extras = ["toml"], version = "^6.1.2"}
Pygments = "^2.9.0"
types-toml = "^0.10.1"
# packages to play with outputs
matplotlib = "^3.4.3"
numpy = "^1.21.4"
pandas = "^1.3.4"
scipy = "^1.7.2"
seaborn = "^0.11.2"
# jupyter packages
jupyterlab = "^3.2.2"

# let pytest coverage know where code is
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["tennisim"]

# define acceptable coverage and show untested lines 
[tool.coverage.report]
show_missing = true
fail_under = 95

# settings for mypy type checking
[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
